@startuml Status Display System Class Diagram
title Status Display System - Class Structure

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true
hide circle

class StatusCommand {
  - String arguments
  --
  + StatusCommand(String arguments)
  + boolean execute(CommandContext context)
}

class ProjectStatusAnalyzer {
  --
  + ProjectStatus analyzeProject(Project project)
}

class ProjectStatus {
  - String projectName
  - int totalTasks
  - int completedTasks
  - double percentage
  --
  + ProjectStatus(String name, int total, int completed)
  + String getProjectName()
  + int getTotalTasks()
  + int getCompletedTasks()
  + double getPercentage()
  + boolean hasNoTasks()
}

class ConsoleUi {
  - ProjectList projects
  --
  + void showProjectStatus(Project project)
  + void showAllProjectsStatus(ProjectList projectList)
  - String formatStatusSummary(ProjectStatus status)
  - String generateProgressBar(double percentage)
  - String getMotivationalMessage(double percentage)
}

class Project {
  - String projectName
  - TaskList projectTasks
  --
  + String getProjectName()
  + TaskList getProjectTasks()
  + int size()
}

class Task {
  - boolean isDone
  - String description
  --
  + boolean isDone()
}

class TaskList {
  - List<Task> tasks
  --
  + List<Task> getTasks()
}

' Relationships
StatusCommand ..> ProjectStatusAnalyzer : uses
StatusCommand ..> ConsoleUi : uses
ProjectStatusAnalyzer ..> Project : analyzes
ConsoleUi ..> ProjectStatus : displays
Project *-- TaskList : contains
TaskList *-- Task : contains

note top of StatusCommand
  Entry point for status command
  Parses --all flag or project index
end note

note right of ProjectStatusAnalyzer
  Pure analysis logic
  No UI concerns
  Returns data objects
end note

note bottom of ConsoleUi
  UI rendering logic only
  Progress bar: [=========>      ] 50%
  Motivational messages
end note

note left of ProjectStatus
  Inner class of ProjectStatusAnalyzer
  Immutable data transfer object
  Calculated percentage on construction
end note

@enduml

